# minpaku-video

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  compose.yaml  pyproject.toml  requirements.txt  start.bat  start.sh  test_script.txt
.streamlit/: config.toml
src/minpaku_video/: app.py  cli.py  config.py
src/minpaku_video/clients/: claude.py  elevenlabs.py  voicevox.py
src/minpaku_video/generators/: metadata.py  pdf_import.py  script.py  video.py
src/minpaku_video/models/: audio.py  project.py
src/minpaku_video/pipeline/: orchestrator.py  state.py
src/minpaku_video/utils/: display.py  filesystem.py
